# template-cmake

./: CMakeLists.txt  LICENSE  README.md
include/: README.md
src/: READMD.md  main.cpp
